# hero-converter

./: .gitignore  README.md  aura.json  dotaconcept-api.md  hero-converter.cabal
src/Data/Map/: Ordered.hs
src/Dota/: Ability.hs  Hero.hs
src/Dota/Hero/: Name.hs
src/Dota/Hero/Format/: Binary.hs  Native.hs
src/Dota/Hero/Format/Native/: JSON.hs
