name:                hero-converter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Solonarv/hero-converter#readme
license:             MIT
license-file:        LICENSE
author:              Nicolas Stamm
maintainer:          nstamm@gmx.de
copyright:           2017 Nicolas Stamm
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dota.Hero
                     , Dota.Ability
                     , Dota.Hero.Name
                     , Dota.Hero.Format.Native.JSON
  build-depends:       base >= 4.7 && < 5
                     , microlens
                     , microlens-th
                     , containers
                     , vector
                     , aeson
  default-language:    Haskell2010

test-suite hero-converter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hero-converter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Solonarv/hero-converter
